# rootwork

./: Cargo.toml  LICENSE
src/: app.rs  main.rs
src/contexts/: boot.rs  dns.rs  host.rs  logs.rs  mod.rs  network.rs  units.rs
src/systemd/: client.rs  logs.rs  mod.rs  units.rs
src/widgets/: help.rs  log_view.rs  mod.rs  status_bar.rs  unit_list.rs
