[package]
name = "rootwork"
version = "0.1.0"
edition = "2024"
authors = ["Jianfei Wang <dev@jfwang.me>"]
description = "systemd TUI — the mycelial nervous system beneath"
license = "MIT"
repository = "https://github.com/thinxer/rootwork"

[dependencies]
# TUI framework
ratatui = { version = "0.29", features = ["crossterm"] }
crossterm = { version = "0.28", features = ["event-stream"] }

# Async runtime
tokio = { version = "1.43", features = ["full"] }
tokio-util = "0.7"

# D-Bus for systemd communication
zbus = "5.5"

# systemd journal access (libsystemd wrapper)
# Note: requires libsystemd-dev on Debian/Ubuntu
libsystemd = "0.7"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Unix APIs (for getuid)
libc = "0.2"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Date/time for logs
chrono = "0.4"

# CLI
clap = { version = "4.5", features = ["derive"] }

[profile.release]
opt-level = 3
lto = true
strip = true
